force-app/main/default/objects/Custom_Object_3__c/Custom_Object_3__c.object-meta.xml
<CustomObject>
    <label>Custom Object 3</label>
    <nameField>
        <label>Custom Object 3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>object3s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>