force-app/main/default/objects/Custom_Object_3__c/fields/field31__c.field-meta.xml
<CustomField>
    <fullName>field31__c</fullName>
    <label>field31</label>
    <type>Phone</type>
</CustomField>