force-app/main/default/objects/Custom_Object_3__c/fields/field32__c.field-meta.xml
<CustomField>
    <fullName>field32__c</fullName>
    <label>field32</label>
    <length>50</length>
    <type>Text</type>
</CustomField>