force-app/main/default/objects/Custom_Object_3__c/fields/field33__c.field-meta.xml
<CustomField>
    <fullName>field33__c</fullName>
    <label>field33</label>
    <type>TextArea</type>
</CustomField>